[gd_scene load_steps=3 format=3 uid="uid://dstash_screen"]

[ext_resource type="Script" path="res://scripts/ui/stash/stash_screen.gd" id="1_stash_screen"]
[ext_resource type="Script" path="res://scripts/ui/stash/stash_grid.gd" id="2_stash_grid"]

[node name="StashScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_stash_screen")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 0.95)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
horizontal_scroll_mode = 0

[node name="StashGrid" type="Control" parent="MarginContainer/HBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(640, 2560)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_stash_grid")

[node name="SidePanel" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="MarginContainer/HBoxContainer/SidePanel"]
layout_mode = 2
text = "STASH"
horizontal_alignment = 1

[node name="Separator1" type="HSeparator" parent="MarginContainer/HBoxContainer/SidePanel"]
layout_mode = 2

[node name="WalletContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/SidePanel"]
layout_mode = 2

[node name="WalletIcon" type="Label" parent="MarginContainer/HBoxContainer/SidePanel/WalletContainer"]
layout_mode = 2
text = "Gold:"

[node name="GoldLabel" type="Label" parent="MarginContainer/HBoxContainer/SidePanel/WalletContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 2

[node name="Separator2" type="HSeparator" parent="MarginContainer/HBoxContainer/SidePanel"]
layout_mode = 2

[node name="NavigationLabel" type="Label" parent="MarginContainer/HBoxContainer/SidePanel"]
layout_mode = 2
text = "Navigation"
horizontal_alignment = 1

[node name="LoadoutButton" type="Button" parent="MarginContainer/HBoxContainer/SidePanel"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Loadout"

[node name="TradersButton" type="Button" parent="MarginContainer/HBoxContainer/SidePanel"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Traders"

[node name="MarketButton" type="Button" parent="MarginContainer/HBoxContainer/SidePanel"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Market"

[node name="Separator3" type="HSeparator" parent="MarginContainer/HBoxContainer/SidePanel"]
layout_mode = 2

[node name="RefreshButton" type="Button" parent="MarginContainer/HBoxContainer/SidePanel"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Refresh"

[node name="Spacer" type="Control" parent="MarginContainer/HBoxContainer/SidePanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="CloseButton" type="Button" parent="MarginContainer/HBoxContainer/SidePanel"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Close [ESC]"

[node name="ItemTooltip" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(250, 100)
offset_right = 250.0
offset_bottom = 100.0

[node name="TooltipLabel" type="Label" parent="ItemTooltip"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
text = "Item Name
[Category]
Description here
Value: 0 gold"
autowrap_mode = 2

[node name="ContextMenu" type="PopupMenu" parent="."]

[connection signal="pressed" from="MarginContainer/HBoxContainer/SidePanel/LoadoutButton" to="." method="_on_loadout_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/SidePanel/TradersButton" to="." method="_on_traders_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/SidePanel/MarketButton" to="." method="_on_market_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/SidePanel/RefreshButton" to="." method="_on_refresh_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/SidePanel/CloseButton" to="." method="_on_close_button_pressed"]
